--- a/html-embeds/anonymous-sources.html
+++ b/html-embeds/anonymous-sources.html
@@ -26,6 +26,11 @@
 </div>
 
 <style>
+    @font-face {
+  font-family: 'AP Var';
+  src: url('../fonts/APVarW05-Regular.woff2') format('woff2');  
+  font-display: swap;
+}
   /* CSS Custom Properties using AP Design Tokens */
   :root {
     /* Colors from your design system */
@@ -44,8 +49,8 @@
     /* Typography */
     --ap-font-family: "AP Var", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
     --ap-font-weight-regular: 400;
-    --ap-font-weight-medium: 530;
-    --ap-font-weight-bold: 676;
+    --ap-font-weight-medium: 500;
+    --ap-font-weight-bold: 700;
     
     /* Spacing (4pt scale) */
     --ap-space-4: 0.25rem;
@@ -98,6 +103,7 @@
   .ap-embed-headline {
     margin: 0 0 var(--ap-space-8) 0;
     font-size: 1.125rem; /* 18px */
+    font-stretch:87.5%;
     line-height: 1.3;
     font-weight: var(--ap-font-weight-bold);
     color: var(--ap-color-neutral-900);
