--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 
         body {
             font-family: "AP Var", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
-            background: #ffffff;
+            background: var(--ap-color-neutral-100);
             color: #191919;
         }
 
