Adjusted banner size

--- a/html-embeds/anonymous-sources.html
+++ b/html-embeds/anonymous-sources.html
@@ -70,7 +70,7 @@
 
   /* Base embed container */
   .ap-embed {
-    max-width: 600px;
+    width: 80%;
     margin: 0 auto;
     background: var(--ap-color-white);
     border: var(--ap-stroke-1) solid var(--ap-color-neutral-400);
