--- a/html-embeds/anonymous-sources.html
+++ b/html-embeds/anonymous-sources.html
@@ -12,15 +12,15 @@
   <div class="ap-embed-content">
     <div class="ap-embed-text">
       <div class="ap-embed-prompt"></div>
-      <h3 class="ap-embed-headline">AP's anonymous sources policy</h3>
-      <p class="ap-embed-description">Learn more about when AP uses anonymous sources in its journalism.</p>
+      <h3 class="ap-embed-headline">From AP's Standards and Stylebook teams:</h3>
+      <p class="ap-embed-description">The AP is using anonymous sourcing to provide information for this story. Washington Bureau Chief Anna Johnson explains AP's policy on the use of anonymous sources.</p>
     </div>
     <a 
       class="ap-embed-cta" 
       href="#" 
       aria-label="Read more about AP's anonymous sources policy"
     >
-      Read more
+      Watch video
     </a>
   </div>
 </div>
