Added video link

--- a/index.html
+++ b/index.html
@@ -140,8 +140,12 @@
     <div class="main-content">
         <h1 class="title">AP Product Design</h1>
         <h2 class="section-name">HTML embeds</h2>
+        <ul>
+            <li><a href="html-embeds/anonymous-sources.html" class="text-link">Anonymous sources embed</a></li>
+            <li><a href="html-embeds/anonymous-sources-video.html" class="text-link">Anonymous sources embed with video image</a></li>
+
+        </ul>
         
-        <a href="html-embeds/anonymous-sources.html" class="text-link">Anonymous sources embed</a>
     </div>
 </body>
 </html>
