--- a/html-embeds/anonymous-sources-video.html
+++ b/html-embeds/anonymous-sources-video.html
@@ -111,7 +111,7 @@
 
   .ap-embed-headline {
     margin: 0 0 var(--ap-space-8) 0;
-    font-size: 1.125rem; /* 18px */
+    font-size: 1.75rem;
     font-stretch: 87.5%;
     line-height: 1.3;
     font-weight: var(--ap-font-weight-bold);
@@ -121,7 +121,7 @@
 
   .ap-embed-description {
     margin: 0 0 var(--ap-space-16) 0;
-    font-size: 0.875rem; /* 14px */
+    font-size: 1.25rem;
     line-height: 1.4;
     font-weight: var(--ap-font-weight-regular);
     color: var(--ap-color-neutral-700);
