--- a/index.html
+++ b/index.html
@@ -145,6 +145,11 @@
             <li><a href="html-embeds/anonymous-sources-video.html" class="text-link">Anonymous sources embed with video image</a></li>
 
         </ul>
+         <h2 class="section-name">HTML modals</h2>
+        <ul>
+            <li><a href="modals/ap_breaking_news_modal.html" class="text-link">One Signal modal</a></li>
+
+        </ul>
         
     </div>
 </body>
