--- a/index.html
+++ b/index.html
@@ -104,6 +104,11 @@
             outline: 2px solid #0042a9;
             outline-offset: 2px;
         }
+        .ul {
+            list-style-type: disc;
+            padding-left: 20px;
+            margin-bottom: 2rem;
+        }
 
         /* Responsive adjustments */
         @media (max-width: 768px) {
@@ -148,6 +153,11 @@
          <h2 class="section-name">HTML modals</h2>
         <ul>
             <li><a href="modals/ap_breaking_news_modal.html" class="text-link">One Signal modal</a></li>
+
+        </ul>
+         <h2 class="section-name">Styleguide</h2>
+        <ul>
+            <li><a href="styleguide/index.html" class="text-link">Typography styleguide</a></li>
 
         </ul>
         
