--- a/styleguide/index-old.html
+++ b/styleguide/index-old.html
@@ -37,11 +37,9 @@
     .paren{font-size:12px;color:var(--muted);margin-left:8px;font-family:var(--mono)}
     .size{font-family:var(--mono);font-size:12px;color:var(--muted);margin-left:8px}
 
-    .story-link{display:block;margin-bottom:4px;font-stretch:87.5%;}
+    .story-link{display:block;margin-bottom:4px}
     .story-link.medium{font-weight:500}
     .story-link.bold{font-weight:700}
-
-    .section-heading-text{font-stretch:75%;}
 
     /* Toggle */
     .toggle-wrap{margin:0 0 20px 0;display:flex;align-items:center;gap:8px;font-size:14px}
@@ -78,11 +76,11 @@
     <!-- SECTION HEADINGS -->
     <section class="card">
       <div class="section-heading">Section Headings <span class="paren">(PageList-header-title)</span></div>
-      <div class="sample"><span class="section-heading-text" style="font-size:32px;font-weight:700;text-transform:uppercase;">Section Heading 1</span><span class="size">/* 32px */</span></div>
-      <div class="sample"><span class="section-heading-text" style="font-size:24px;font-weight:700;text-transform:uppercase;">Section Heading 2</span><span class="size">/* 24px */</span></div>
-      <div class="sample"><span class="section-heading-text" style="font-size:20px;font-weight:700;text-transform:uppercase;">Section Heading 3</span><span class="size">/* 20px */</span></div>
-      <div class="sample"><span class="section-heading-text" style="font-size:16px;font-weight:700;text-transform:uppercase;">Section Heading 4</span><span class="size">/* 16px */</span></div>
-      <div class="sample"><span class="section-heading-text" style="font-size:14px;font-weight:700;text-transform:uppercase;">Section Heading 5</span><span class="size">/* 14px */</span></div>
+      <div class="sample"><span style="font-size:32px;font-weight:700;text-transform:uppercase;">Section Heading 1</span><span class="size">/* 32px */</span></div>
+      <div class="sample"><span style="font-size:24px;font-weight:700;text-transform:uppercase;">Section Heading 2</span><span class="size">/* 24px */</span></div>
+      <div class="sample"><span style="font-size:20px;font-weight:700;text-transform:uppercase;">Section Heading 3</span><span class="size">/* 20px */</span></div>
+      <div class="sample"><span style="font-size:16px;font-weight:700;text-transform:uppercase;">Section Heading 4</span><span class="size">/* 16px */</span></div>
+      <div class="sample"><span style="font-size:14px;font-weight:700;text-transform:uppercase;">Section Heading 5</span><span class="size">/* 14px */</span></div>
     </section>
 
     <!-- STORY LINK TITLES -->
@@ -132,7 +130,7 @@
       <div class="sample"><span style="font-size:14px;">Helper Text</span><span class="size">/* 14px */</span></div>
       <div class="sample"><span style="font-size:14px;">Error Text</span><span class="size">/* 14px */</span></div>
       <div class="sample"><span style="font-size:14px;">Success Text</span><span class="size">/* 14px */</span></div>
-      <div class="sample"><span style="font-size:12px;">Char Counter</span><span class="size">/* 12px */</span></div>
+      <div class="sample"><span style="font-size:14px;">Char Counter</span><span class="size">/* 12px */</span></div>
       <div class="sample"><span style="font-size:16px;">Button Text Default</span><span class="size">/* 16px */</span></div>
       <div class="sample"><span style="font-size:14px;">Button Text Compact</span><span class="size">/* 14px */</span></div>
       <div class="sample"><span style="font-size:16px;">Text Link Default</span><span class="size">/* 16px */</span></div>
