--- a/index.html
+++ b/index.html
@@ -45,11 +45,7 @@
     
     /* Strokes */
     --ap-stroke-1: 0.0625rem; /* 1px */
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-        }
+
     }
 
         body {
@@ -108,7 +104,7 @@
         ul {
             list-style-type: disc;
             padding-left: 20px;
-            margin-bottom: 2rem;
+            padding-bottom: 2rem;
         }
 
         /* Responsive adjustments */
@@ -117,6 +113,11 @@
                 left: 20px;
                 width: 50px;
             }
+        ul {
+            list-style-type: disc;
+            padding-left: 20px;
+            margin-bottom: 2rem;
+        }
 
             .main-content {
                 margin-left: 20px;
