--- a/index.html
+++ b/index.html
@@ -150,6 +150,7 @@
         <ul>
             <li><a href="html-embeds/anonymous-sources.html" class="text-link">Anonymous sources embed</a></li>
             <li><a href="html-embeds/anonymous-sources-video.html" class="text-link">Anonymous sources embed with video image</a></li>
+            <li><a href="html-embeds/ap-embed-vertical.html" class="text-link">AP embed vertical</a></li>
 
         </ul>
          <h2 class="section-name">HTML modals</h2>
