--- a/index.html
+++ b/index.html
@@ -158,6 +158,11 @@
             <li><a href="modals/ap_breaking_news_modal.html" class="text-link">One Signal modal</a></li>
 
         </ul>
+             <h2 class="section-name">Animations</h2>
+        <ul>
+            <li><a href="animation/confirmation-animation.html" class="text-link">Confirmation animation</a></li>
+
+        </ul>
          <h2 class="section-name">Styleguide</h2>
         <ul>
             <li><a href="styleguide/index.html" class="text-link">Typography styleguide</a></li>
