--- a/modals/ap_donation_modals.html
+++ b/modals/ap_donation_modals.html
@@ -309,9 +309,7 @@
 
         <button class="btn-primary" onclick="donate()">
             Donate to the AP
-            <svg class="arrow-icon" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-                <path d="M5 12H19M19 12L12 5M19 12L12 19" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
-            </svg>
+                                   <img src="../images/forward-arrow.svg" alt="Arrow">
         </button>
 
         <button class="btn-text" onclick="maybeLater()">Maybe later</button>
@@ -331,9 +329,8 @@
 
         <button class="btn-primary" onclick="donate()">
             Donate to the AP
-            <svg class="arrow-icon" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-                <path d="M5 12H19M19 12L12 5M19 12L12 19" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
-            </svg>
+                       <img src="../images/forward-arrow.svg" alt="Arrow">
+
         </button>
 
         <div class="divider"></div>
