--- a/index.html
+++ b/index.html
@@ -155,7 +155,11 @@
         </ul>
          <h2 class="section-name">HTML modals</h2>
         <ul>
-            <li><a href="modals/ap_breaking_news_modal.html" class="text-link">One Signal modal</a></li>
+            <li><a href="modals/ap_breaking_news_modal.html" class="text-link">One Signal alerts modal</a></li>
+
+        </ul>
+         <ul>
+            <li><a href="modals/ap_donation_modals.html" class="text-link">One Signal donations modal</a></li>
 
         </ul>
              <h2 class="section-name">Animations</h2>
