--- a/index.html
+++ b/index.html
@@ -106,6 +106,9 @@
             padding-left: 20px;
             padding-bottom: 2rem;
         }
+        ul li{
+            padding-bottom: 1rem;
+        }
 
         /* Responsive adjustments */
         @media (max-width: 768px) {
@@ -117,6 +120,9 @@
             list-style-type: disc;
             padding-left: 20px;
             margin-bottom: 2rem;
+        }
+                ul li{
+            padding-bottom: 1rem;
         }
 
             .main-content {
@@ -156,12 +162,11 @@
          <h2 class="section-name">HTML modals</h2>
         <ul>
             <li><a href="modals/ap_breaking_news_modal.html" class="text-link">One Signal alerts modal</a></li>
-
-        </ul>
-         <ul>
             <li><a href="modals/ap_donation_modals.html" class="text-link">One Signal donations modal</a></li>
 
+
         </ul>
+
              <h2 class="section-name">Animations</h2>
         <ul>
             <li><a href="animation/confirmation-animation.html" class="text-link">Confirmation animation</a></li>
