--- a/index.html
+++ b/index.html
@@ -163,6 +163,8 @@
         <ul>
             <li><a href="modals/ap_breaking_news_modal.html" class="text-link">One Signal alerts modal</a></li>
             <li><a href="modals/ap_donation_modals.html" class="text-link">One Signal donations modal</a></li>
+            <li><a href="modals/ap-donation-modal-full.html" class="text-link">One Signal donations modal (full, single)</a></li>
+
 
 
         </ul>
