added lite version

--- a/modals/ap-donation-modal-lite.html
+++ b/modals/ap-donation-modal-lite.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AP Donation Modal - Full</title>
+    <title>AP Donation Modal - Lite</title>
     <style>
         @font-face {
             font-family: 'AP Var';
@@ -59,10 +59,6 @@
             padding: 0;
         }
 
-           h2 {
-            margin-top: 1rem;
-        }
-
         /* Modal overlay - semi-transparent background */
         .modal-overlay {
             position: fixed;
@@ -87,8 +83,6 @@
             padding: var(--ap-space-24);
             position: relative;
             box-shadow: 0 20px 60px rgba(0, 0, 0, 0.3);
-            max-height: 90vh;
-            overflow-y: auto;
         }
 
         /* Close button */
@@ -185,72 +179,6 @@
             height: 20px;
         }
 
-        /* Divider */
-        .divider {
-            width: 100%;
-            height: var(--ap-stroke-1);
-            background: var(--ap-color-neutral-400);
-            margin: var(--ap-space-24) 0;
-        }
-
-        /* Secondary section */
-        .secondary-section {
-            text-align: center;
-        }
-
-        .secondary-text {
-            font-size: 0.9375rem;
-            color: var(--ap-color-neutral-900);
-            margin-bottom: var(--ap-space-16);
-            font-weight: var(--ap-font-weight-regular);
-        }
-
-        /* Secondary button (outlined) */
-        .btn-secondary {
-            width: 100%;
-            padding: var(--ap-space-16);
-            background: var(--ap-color-white);
-            color: var(--ap-color-neutral-900);
-            border: var(--ap-stroke-1) solid var(--ap-color-neutral-400);
-            border-radius: var(--ap-space-32);
-            font-size: 1rem;
-            font-weight: var(--ap-font-weight-medium);
-            font-family: var(--ap-font-family);
-            cursor: pointer;
-            transition: background 0.2s ease;
-            margin-bottom: var(--ap-space-16);
-            font-variation-settings: "wght" 530;
-        }
-
-        .btn-secondary:hover {
-            background: var(--ap-color-neutral-100);
-        }
-
-        .btn-secondary:focus {
-            outline: 2px solid var(--ap-color-neutral-900);
-            outline-offset: 2px;
-        }
-
-        /* Small text with link */
-        .small-text {
-            font-size: 0.8125rem;
-            color: var(--ap-color-neutral-900);
-            text-align: center;
-            line-height: 1.5;
-            font-weight: var(--ap-font-weight-regular);
-            margin-bottom: var(--ap-space-16);
-        }
-
-        .small-text a {
-            color: var(--ap-color-neutral-900);
-            text-decoration: underline;
-            font-weight: var(--ap-font-weight-medium);
-        }
-
-        .small-text a:hover {
-            text-decoration: none;
-        }
-
         /* Text link button */
         .btn-text {
             width: 100%;
@@ -316,28 +244,6 @@
             .modal-body {
                 color: var(--ap-color-neutral-200);
             }
-
-            .secondary-text {
-                color: var(--ap-color-neutral-200);
-            }
-
-            .small-text {
-                color: var(--ap-color-neutral-200);
-            }
-
-            .small-text a {
-                color: var(--ap-color-white);
-            }
-
-            .btn-secondary {
-                background: transparent;
-                color: var(--ap-color-white);
-                border-color: var(--ap-color-neutral-600);
-            }
-
-            .btn-secondary:hover {
-                background: var(--ap-color-neutral-800);
-            }
         }
     </style>
 </head>
@@ -347,7 +253,8 @@
             <button class="close-btn" onclick="closeModal()" aria-label="Close modal">✕</button>
             
             <div class="ap-logo">
-                <img src="../images/ap-logo.png" alt="AP Logo">
+                               <img src="../images/ap-logo.png" alt="AP Logo">
+
             </div>
 
             <h2 class="modal-headline">Support independent journalism</h2>
@@ -355,18 +262,9 @@
 
             <button class="btn-primary" onclick="donate()">
                 Donate to the AP
-                <img src="../images/forward-arrow.svg" alt="Arrow">
+                 <img src="../images/forward-arrow.svg" alt="Arrow">
+
             </button>
-
-            <div class="divider"></div>
-
-            <div class="secondary-section">
-                <p class="secondary-text">Already donated, or registered</p>
-                <button class="btn-secondary" onclick="signIn()">Sign in</button>
-                <p class="small-text">
-                    <a href="#" onclick="createAccount(); return false;">Create an account</a> to stay connected and up to date with new features
-                </p>
-            </div>
 
             <button class="btn-text" onclick="maybeLater()">Maybe later</button>
         </div>
@@ -384,18 +282,6 @@
             console.log('Donate clicked');
             // Redirect to donation page or open donation flow
             window.location.href = '/donate';
-        }
-
-        function signIn() {
-            console.log('Sign in clicked');
-            // Redirect to sign in page
-            window.location.href = '/signin';
-        }
-
-        function createAccount() {
-            console.log('Create account clicked');
-            // Redirect to registration page
-            window.location.href = '/register';
         }
 
         function maybeLater() {
