--- a/index.html
+++ b/index.html
@@ -164,6 +164,8 @@
             <li><a href="modals/ap_breaking_news_modal.html" class="text-link">One Signal alerts modal</a></li>
             <li><a href="modals/ap_donation_modals.html" class="text-link">One Signal donations modal</a></li>
             <li><a href="modals/ap-donation-modal-full.html" class="text-link">One Signal donations modal (full, single)</a></li>
+            <li><a href="modals/ap-donation-modal-lite.html" class="text-link">One Signal donations modal (lite, single)</a></li>
+
 
 
 
