--- a/index.html
+++ b/index.html
@@ -179,6 +179,8 @@
          <h2 class="section-name">Styleguide</h2>
         <ul>
             <li><a href="styleguide/index.html" class="text-link">Typography styleguide</a></li>
+            <li><a href="apvar/ap-font-styleguide.html" class="text-link">Typography styleguide</a></li>
+
 
         </ul>
         
