--- a/apvar/ap-font-styleguide.html
+++ b/apvar/ap-font-styleguide.html
@@ -317,7 +317,7 @@
         .news-label {
             font-size: 11px;
             font-weight: 600;
-            color: #999;
+            color: #666;
             text-transform: uppercase;
             letter-spacing: 0.8px;
             margin-bottom: 28px;
@@ -336,7 +336,7 @@
             line-height: 1.3;
             letter-spacing: -0.5px;
             margin: 0;
-            color: #1a1a1a;
+            color: #191919;
             font-variation-settings: 'wdth' 87.5;
         }
 
@@ -362,7 +362,7 @@
             font-family: 'AP Var W05', system-ui;
             font-size: 12px;
             font-weight: 500;
-            color: #999;
+            color: #666;
             text-transform: uppercase;
             letter-spacing: 0.5px;
         }
@@ -478,21 +478,7 @@
                     <div class="comparison-label">Bold (700)</div>
                 </div>
             </div>
-        </section>
-
-        <!-- Overlay comparison -->
-        <section>
-            <div class="section-title">Weight Overlay</div>
-            <div class="overlay-comparison">
-                <div class="overlay-title">See weight contrast at a glance</div>
-                <div class="overlay-stack">
-                    <div class="overlay-text weight-400">Journalism</div>
-                    <div class="overlay-text weight-500">Journalism</div>
-                    <div class="overlay-text weight-700">Journalism</div>
-                </div>
-                <div class="overlay-label">Weights 400, 500, and 700 layered for comparison</div>
-            </div>
-        </section>
+        </section
 
         <!-- Width variations -->
         <section>
@@ -548,7 +534,7 @@
                 <div class="news-card">
                     <div class="news-label">Semicondensed Bold Headline</div>
                     <article class="news-item">
-                        <h2 class="news-headline headline-bold">Federal Reserve Signals Potential Rate Cuts in Coming Months</h2>
+                        <h2 class="news-headline headline-bold">Federal Reserve signals potential rate cuts in coming months</h2>
                         <p class="news-summary">The central bank's latest statement suggests officials are considering easing monetary policy amid cooling inflation pressures. Markets responded positively to the announcement.</p>
                         <time class="news-timestamp">March 15, 2025 • 2:34 PM ET</time>
                     </article>
@@ -558,7 +544,7 @@
                 <div class="news-card">
                     <div class="news-label">Semicondensed Medium Headline</div>
                     <article class="news-item">
-                        <h2 class="news-headline headline-medium">Federal Reserve Signals Potential Rate Cuts in Coming Months</h2>
+                        <h2 class="news-headline headline-medium">Federal Reserve signals potential rate cuts in coming months</h2>
                         <p class="news-summary">The central bank's latest statement suggests officials are considering easing monetary policy amid cooling inflation pressures. Markets responded positively to the announcement.</p>
                         <time class="news-timestamp">March 15, 2025 • 2:34 PM ET</time>
                     </article>
@@ -570,7 +556,7 @@
                 <div class="news-card">
                     <div class="news-label">Variant: Bold with Different Story</div>
                     <article class="news-item">
-                        <h2 class="news-headline headline-bold">Tech Giant Announces Major Investment in Renewable Energy</h2>
+                        <h2 class="news-headline headline-bold">Tech giant announces major investment in renewable energy</h2>
                         <p class="news-summary">The company committed over $5 billion to develop sustainable infrastructure across operations. Industry analysts view the move as significant step toward climate goals.</p>
                         <time class="news-timestamp">March 14, 2025 • 9:12 AM ET</time>
                     </article>
@@ -579,7 +565,7 @@
                 <div class="news-card">
                     <div class="news-label">Variant: Medium with Different Story</div>
                     <article class="news-item">
-                        <h2 class="news-headline headline-medium">Tech Giant Announces Major Investment in Renewable Energy</h2>
+                        <h2 class="news-headline headline-medium">Tech giant announces major investment in renewable energy</h2>
                         <p class="news-summary">The company committed over $5 billion to develop sustainable infrastructure across operations. Industry analysts view the move as significant step toward climate goals.</p>
                         <time class="news-timestamp">March 14, 2025 • 9:12 AM ET</time>
                     </article>
