--- a/apvar/ap-font-styleguide.html
+++ b/apvar/ap-font-styleguide.html
@@ -524,7 +524,6 @@
                 </div>
             </div>
         </section>
-
         <!-- News content examples -->
         <section>
             <div class="section-title">News Content Examples</div>
@@ -532,7 +531,7 @@
             <div class="news-grid">
                 <!-- Variant 1: Bold Headline -->
                 <div class="news-card">
-                    <div class="news-label">Semicondensed Bold Headline</div>
+                    <div class="news-label">Semicondensed Bold Headline, Regular weight text (400), Medium weight timestamp (500)</div>
                     <article class="news-item">
                         <h2 class="news-headline headline-bold">Federal Reserve signals potential rate cuts in coming months</h2>
                         <p class="news-summary">The central bank's latest statement suggests officials are considering easing monetary policy amid cooling inflation pressures. Markets responded positively to the announcement.</p>
@@ -542,7 +541,7 @@
 
                 <!-- Variant 2: Medium Headline -->
                 <div class="news-card">
-                    <div class="news-label">Semicondensed Medium Headline</div>
+                    <div class="news-label">Semicondensed Medium Headline, Regular weight text (400), Medium weight timestamp (500)</div>
                     <article class="news-item">
                         <h2 class="news-headline headline-medium">Federal Reserve signals potential rate cuts in coming months</h2>
                         <p class="news-summary">The central bank's latest statement suggests officials are considering easing monetary policy amid cooling inflation pressures. Markets responded positively to the announcement.</p>
@@ -554,7 +553,7 @@
             <div class="news-grid">
                 <!-- More examples -->
                 <div class="news-card">
-                    <div class="news-label">Variant: Bold with Different Story</div>
+                    <div class="news-label">Variant: Bold with Different Story, Regular weight text (400), Medium weight timestamp (500)</div>
                     <article class="news-item">
                         <h2 class="news-headline headline-bold">Tech giant announces major investment in renewable energy</h2>
                         <p class="news-summary">The company committed over $5 billion to develop sustainable infrastructure across operations. Industry analysts view the move as significant step toward climate goals.</p>
@@ -563,7 +562,7 @@
                 </div>
 
                 <div class="news-card">
-                    <div class="news-label">Variant: Medium with Different Story</div>
+                    <div class="news-label">Variant: Medium with Different Story, Regular weight text (400), Medium weight timestamp (500)</div>
                     <article class="news-item">
                         <h2 class="news-headline headline-medium">Tech giant announces major investment in renewable energy</h2>
                         <p class="news-summary">The company committed over $5 billion to develop sustainable infrastructure across operations. Industry analysts view the move as significant step toward climate goals.</p>
