--- a/apvar/ap-font-styleguide.html
+++ b/apvar/ap-font-styleguide.html
@@ -146,6 +146,8 @@
             margin: 16px 0;
         }
 
+
+
         .comparison-label {
             font-size: 12px;
             color: #999;
@@ -348,6 +350,7 @@
             font-weight: 500;
         }
 
+
         .news-summary {
             font-family: 'AP Var W05', system-ui;
             font-size: 16px;
@@ -362,6 +365,15 @@
             font-family: 'AP Var W05', system-ui;
             font-size: 12px;
             font-weight: 500;
+            color: #666;
+            text-transform: uppercase;
+            letter-spacing: 0.5px;
+        }
+
+           .news-timestamp-alt {
+            font-family: 'AP Var W05', system-ui;
+            font-size: 12px;
+            font-weight: 530;
             color: #666;
             text-transform: uppercase;
             letter-spacing: 0.5px;
@@ -535,7 +547,7 @@
                     <article class="news-item">
                         <h2 class="news-headline headline-bold">Federal Reserve signals potential rate cuts in coming months</h2>
                         <p class="news-summary">The central bank's latest statement suggests officials are considering easing monetary policy amid cooling inflation pressures. Markets responded positively to the announcement.</p>
-                        <time class="news-timestamp">March 15, 2025 • 2:34 PM ET</time>
+                        <time class="news-timestamp-alt">March 15, 2025 • 2:34 PM ET</time>
                     </article>
                 </div>
 
@@ -545,7 +557,7 @@
                     <article class="news-item">
                         <h2 class="news-headline headline-medium">Federal Reserve signals potential rate cuts in coming months</h2>
                         <p class="news-summary">The central bank's latest statement suggests officials are considering easing monetary policy amid cooling inflation pressures. Markets responded positively to the announcement.</p>
-                        <time class="news-timestamp">March 15, 2025 • 2:34 PM ET</time>
+                        <time class="news-timestamp">March 14, 2025 • 9:12 AM ET</time>
                     </article>
                 </div>
             </div>
