--- a/index.html
+++ b/index.html
@@ -183,6 +183,13 @@
 
 
         </ul>
+
+          <h2 class="section-name">Prototypes</h2>
+        <ul>
+            <li><a href="prototypes/list-items.html" class="text-link">List items</a></li>
+
+        </ul>
+        
         
     </div>
 </body>
