--- a/prototypes/list-items.html
+++ b/prototypes/list-items.html
@@ -379,7 +379,7 @@
         <span class="related-bullet"></span>
         <div class="related-content font-width-normal">
           <div class="related-eyebrow">
-            <span class="topic-label">Politics</span>
+            <span class="elapsed-time">breaking news</span>
           </div>
           <a href="#" class="related-headline">Voter profiles show surprising demographic shifts in swing regions</a>
           <span class="related-timestamp-recent">38 MINS AGO</span>
@@ -422,7 +422,7 @@
 
       <li class="coverage-item">
         <div class="coverage-eyebrow">
-          <span class="topic-label">Politics</span>
+            <span class="elapsed-time">breaking news</span>
         </div>
         <a href="#" class="headline">What today's results mean for the economy and trade policy</a>
         <span class="timestamp-recent">38 MINS AGO</span>
