--- a/apvar/ap-font-styleguide.html
+++ b/apvar/ap-font-styleguide.html
@@ -141,6 +141,42 @@
             margin: 16px 0;
         }
 
+        .weight-comparison-text.regular-408 {
+            font-weight: 408;
+            margin: 16px 0;
+        }
+
+        .weight-comparison-text.regular-416 {
+            font-weight: 416;
+            margin: 16px 0;
+        }
+
+        .weight-comparison-text.medium-530 {
+            font-weight: 530;
+            margin: 16px 0;
+        }
+
+        .weight-comparison-text.medium-550 {
+            font-weight: 550;
+            margin: 16px 0;
+        }
+
+        .weight-comparison-text.medium-570 {
+            font-weight: 570;
+            margin: 16px 0;
+        }
+
+        .weight-comparison-text.bold-676 {
+            font-weight: 676;
+            margin: 16px 0;
+        }
+
+        .weight-comparison-text.bold-724 {
+            font-weight: 724;
+            margin: 16px 0;
+        }
+
+
         .weight-comparison-text.bold {
             font-weight: 700;
             margin: 16px 0;
@@ -515,16 +551,44 @@
             <div class="section-title">Weight Comparison</div>
             <div class="comparison-section">
                 <div class="weight-comparison">
-                    <div class="weight-comparison-text">Breaking News</div>
+                    <div class="weight-comparison-text">This weight is 400</div>
                     <div class="comparison-label">Regular (400)</div>
                 </div>
                 <div class="weight-comparison">
-                    <div class="weight-comparison-text medium">Breaking News</div>
+                    <div class="weight-comparison-text.regular-408">This weight is 408</div>
+                    <div class="comparison-label">Regular (408)</div>
+                </div>
+                <div class="weight-comparison">
+                    <div class="weight-comparison-text.regular-416">This weight is 416</div>
+                    <div class="comparison-label">Regular (416)</div>
+                </div>
+                <div class="weight-comparison">
+                    <div class="weight-comparison-text medium">>This weight is 500</div>
                     <div class="comparison-label">Medium (500)</div>
+                </div>
+                <div class="weight-comparison">
+                    <div class="weight-comparison-text medium.530">>This weight is 530</div>
+                    <div class="comparison-label">Medium (530)</div>
+                </div>
+                <div class="weight-comparison">
+                    <div class="weight-comparison-text medium.550">>This weight is 550</div>
+                    <div class="comparison-label">Medium (550)</div>
+                </div>
+                <div class="weight-comparison">
+                    <div class="weight-comparison-text medium.570">>This weight is 570</div>
+                    <div class="comparison-label">Medium (570)</div>
+                </div>
+                <div class="weight-comparison">
+                    <div class="weight-comparison-text bold.676">>This weight is 676</div>
+                    <div class="comparison-label">Bold (676)</div>
                 </div>
                 <div class="weight-comparison">
                     <div class="weight-comparison-text bold">Breaking News</div>
                     <div class="comparison-label">Bold (700)</div>
+                </div>
+                <div class="weight-comparison">
+                    <div class="weight-comparison-text bold.724">>This weight is 724</div>
+                    <div class="comparison-label">Bold (724)</div>
                 </div>
             </div>
         </section>
