Revise ap-font-styleguide
Made-with: Cursor

--- a/apvar/ap-font-styleguide.html
+++ b/apvar/ap-font-styleguide.html
@@ -583,7 +583,7 @@
                     <div class="comparison-label">Bold (676)</div>
                 </div>
                 <div class="weight-comparison">
-                    <div class="weight-comparison-text bold">Breaking News</div>
+                    <div class="weight-comparison-text bold">This weight is 700</div>
                     <div class="comparison-label">Bold (700)</div>
                 </div>
                 <div class="weight-comparison">
