--- a/apvar/ap-font-styleguide.html
+++ b/apvar/ap-font-styleguide.html
@@ -563,23 +563,23 @@
                     <div class="comparison-label">Regular (416)</div>
                 </div>
                 <div class="weight-comparison">
-                    <div class="weight-comparison-text medium">>This weight is 500</div>
+                    <div class="weight-comparison-text medium">This weight is 500</div>
                     <div class="comparison-label">Medium (500)</div>
                 </div>
                 <div class="weight-comparison">
-                    <div class="weight-comparison-text medium.530">>This weight is 530</div>
+                    <div class="weight-comparison-text medium.530">This weight is 530</div>
                     <div class="comparison-label">Medium (530)</div>
                 </div>
                 <div class="weight-comparison">
-                    <div class="weight-comparison-text medium.550">>This weight is 550</div>
+                    <div class="weight-comparison-text medium.550">This weight is 550</div>
                     <div class="comparison-label">Medium (550)</div>
                 </div>
                 <div class="weight-comparison">
-                    <div class="weight-comparison-text medium.570">>This weight is 570</div>
+                    <div class="weight-comparison-text medium.570">This weight is 570</div>
                     <div class="comparison-label">Medium (570)</div>
                 </div>
                 <div class="weight-comparison">
-                    <div class="weight-comparison-text bold.676">>This weight is 676</div>
+                    <div class="weight-comparison-text bold.676">This weight is 676</div>
                     <div class="comparison-label">Bold (676)</div>
                 </div>
                 <div class="weight-comparison">
@@ -587,7 +587,7 @@
                     <div class="comparison-label">Bold (700)</div>
                 </div>
                 <div class="weight-comparison">
-                    <div class="weight-comparison-text bold.724">>This weight is 724</div>
+                    <div class="weight-comparison-text bold.724">This weight is 724</div>
                     <div class="comparison-label">Bold (724)</div>
                 </div>
             </div>
