Update font styleguide
Made-with: Cursor

--- a/apvar/ap-font-styleguide.html
+++ b/apvar/ap-font-styleguide.html
@@ -710,7 +710,7 @@
 
         <!-- Weight & Width Matrix -->
         <section>
-            <div class="section-title">Weight & Width Matrix</div>
+            <div class="section-title">Weight & Width Matrix - updated</div>
             <div class="comparison-section">
                 <div class="matrix-grid">
                     <!-- Regular Weight -->
